--- a/app/views/group_permissions/show.html.erb
+++ b/app/views/group_permissions/show.html.erb
@@ -8,7 +8,7 @@
       </tr>
     </thead>
     <tbody>
-      <% GroupPermission.permissions.each do |id| %>
+      <% GroupPermission.permissions.sort.each do |id| %>
         <tr class="<%= cycle("odd", "even") %>">
           <td style="text-align: left">
             <%= check_box_tag 'group_permissions_setup[permissions][]', id, @gps.permissions.include?(id),
