View[layouts/nonproject_modules]: fix.

--- a/app/views/layouts/nonproject_modules.html.erb
+++ b/app/views/layouts/nonproject_modules.html.erb
@@ -2,4 +2,4 @@
   <h3><%= t(:label_nonproject_modules) %></h3>
   <%= render partial: 'layouts/nonproject_modules_menu' %>
 <% end %>
-<%= render :file => "layouts/base" %>
+<%= render template: "layouts/base" %>
